--- a/style.css
+++ b/style.css
@@ -33,13 +33,13 @@
 
 .f-paragraph-1 {
   font-family: var(--font-primary);
-  font-size: 1.6rem;
+  font-size: 1.125rem;
   font-weight: 400;
 }
 
 .f-paragraph-2 {
   font-family: var(--font-primary);
-  font-size: 1.125rem;
+  font-size: .9rem;
   font-weight: 400;
 }
 
@@ -120,4 +120,60 @@ body {
   width: 100%;
   height: 100%;
   margin: auto;
+  position: relative;
+}
+
+.box {
+  width: 80%;
+  max-width: 460px;
+  margin: 16px;
+  padding: 24px;
+  background-color: var(--light400);
+  border-radius: 24px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.box form>* {
+  display: block;
+}
+
+.box form {
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
+  align-items: center;
+}
+
+.upload {
+  width: 100%;
+  max-width: 260px;
+  background-color: var(--light400);
+  padding: 24px;
+  border-radius: 16px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.upload >*{
+  display: block;
+}
+
+input[type="file"] {
+  display: none;
+}
+
+.filename {
+  display: none;
+  margin-top: 8px;
+  color: var(--light200);
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.box i {
+  color: var(--light200);
 }
